@@ -382,7 +382,8 @@ void EditorClientQt::handleKeyboardEvent(KeyboardEvent* event)
             case VK_TAB:
                 return;
             default:
-                if (!kevent->ctrlKey() && !kevent->altKey() && !kevent->text().isEmpty()) {
+                if (kevent->type() != PlatformKeyboardEvent::KeyDown
+                        && !kevent->ctrlKey() && !kevent->altKey() && !kevent->text().isEmpty()) {
                     frame->editor()->insertText(kevent->text(), event);
                 } else if (kevent->ctrlKey()) {
                     switch (kevent->windowsVirtualKeyCode()) {
@@ -412,7 +413,7 @@ void EditorClientQt::handleKeyboardEvent(KeyboardEvent* event)
                             break;
                         default:
                             // catch combination AltGr+key or Ctrl+Alt+key
-                            if (!kevent->text().isEmpty()) {
+                            if (kevent->type() != PlatformKeyboardEvent::KeyDown && !kevent->text().isEmpty()) {
                                 frame->editor()->insertText(kevent->text(), event);
                                 break;
                             }
