@@ -1,3 +1,12 @@
+2008-07-24  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon
+
+        Don't insert text on keyDown event in EditorClientQt.
+
+        * WebCoreSupport/EditorClientQt.cpp:
+        (WebCore::EditorClientQt::handleKeyboardEvent):
+
 2008-07-04  Benjamin C Meyer  <ben@meyerhome.net>
 
         Reviewed by Simon.
